@@ -33,6 +33,9 @@ subprojects {
     tasks.withType(Test) {
         jvmArgs += "--enable-preview"
     }
+    tasks.withType(JavaExec) {
+        jvmArgs += "--enable-preview"
+    }
 
 }
 
